# django-coolify

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
djproject/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
