[tool.poetry]
name = "django-coolify-tutorial"
version = "0.1.0"
description = ""
authors = ["Francisco Macedo <franciscovcbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
whitenoise = "^6.8.2"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
